--- a/index.css
+++ b/index.css
@@ -5,11 +5,22 @@ a{
     text-decoration: none;
     color: black;
 }
+@media all  and (max-width: 800px) {
+    .evans{
+        display: none;
+    }
+    .dagi{
+        display: none;
+    }
+  }
+ 
 #navbar{
-    height: 100px;
+    position: fixed;
+  top: 0px;
+  width: 100%;
+    height: 120px;
     background-color: black;
     color:white;
-    margin-top: 0px;
 }
 #logo{
     float: left;
@@ -32,8 +43,10 @@ a{
     border-radius: 50%;
 
 }
+#welcome-section{
+    height: 100vh;
+}
 .welcome{
-height: 50vh;
 padding-top: 200px;
 font-size: 100px;
 background-image: url(https://miro.medium.com/max/680/1*3zwzu2fFptPl1223zYQfiA.jpeg);
@@ -47,7 +60,7 @@ background-color: black;
   padding:20px;
   margin-top: 10px;
 }
-.project-title{
+.project-tile{
     height: 150px;
     width: 31%;
     margin: 10px;
